# mdpredict-russian-rs

./: Cargo.toml  README.md
src/: analyzer.rs  classifier.rs  dictionaries.rs  lib.rs  main.rs  metrics.rs  morphology.rs  rsmorph.rs  rsmorphy_test.rs  sentence.rs
